get table contents by reflection, add 'lobber.tables' property to src-db.properties, add meaningful toString to entities

--- a/src-db.properties
+++ b/src-db.properties
@@ -2,3 +2,5 @@ hibernate.connection.driver_class=oracle.jdbc.driver.OracleDriver
 hibernate.connection.url=jdbc:oracle:thin:@localhost:1522:orcl
 hibernate.connection.username=owner
 hibernate.connection.password=dbowner
+
+lobber.tables=XMLP_RPT_LYT,XMLP_RPT_DT_TMPL
