--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
       <artifactId>log4j-core</artifactId>
       <version>2.11.1</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -39,6 +40,12 @@
       <groupId>com.oracle</groupId>
       <artifactId>ojdbc7</artifactId>
       <version>7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.11</version>
     </dependency>
   </dependencies>
 
