--- a/src/test/resources/installer/ORPOS-13.4.1/product/server/bin/db-reports.properties
+++ b/src/test/resources/installer/ORPOS-13.4.1/product/server/bin/db-reports.properties
@@ -35,7 +35,7 @@ dataset.sample.remove=false
 inst.db.vendor=oracle
 inst.db.product=jdbc
 inst.db.jdbc-driver=oracle.jdbc.driver.OracleDriver
-inst.db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl
+inst.db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl2
 inst.db.jdbc-path=../../../../../../../../lib/
 inst.db.jdbc-jar=ojdbc7.jar
 inst.db.jdbc-jar2=ojdbc7.jar
@@ -47,7 +47,7 @@ inst.db.owner.password-encrypted=aHZjm2JpZg==
 
 # added as workaround
 db.jdbc-driver=oracle.jdbc.driver.OracleDriver
-db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl
+db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl2
 db.owner.user=owner
 db.owner.password-encrypted=aHZjm2JpZg==
 
