--- a/src/test/resources/installer/ORPOS-13.4.1/product/server/bin/db.properties
+++ b/src/test/resources/installer/ORPOS-13.4.1/product/server/bin/db.properties
@@ -35,7 +35,7 @@ dataset.sample.remove=false
 inst.db.vendor=oracle
 inst.db.product=jdbc
 inst.db.jdbc-driver=oracle.jdbc.driver.OracleDriver
-inst.db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl
+inst.db.jdbc-url=jdbc:oracle:thin:@localhost:1555:orcl2
 inst.db.jdbc-path=../../../../../../../../lib/
 inst.db.jdbc-jar=ojdbc7.jar
 inst.db.jdbc-jar2=ojdbc7.jar
