--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,8 @@
 
   <groupId>info.sroman</groupId>
   <artifactId>jpa-lobber</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
-
 
   <name>jpa-lobber</name>
 
@@ -73,7 +72,7 @@
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
-                <mainClass>info.sroman.JPALobber</mainClass>
+                <mainClass>info.sroman.Application</mainClass>
               </manifest>
             </archive>
             <descriptorRefs>
